# gnosis-api

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml  codeql.yml  test.yml
k8s/: deployment.yaml  external-secret.yaml  ingress.yaml  middleware.yaml  pvc.yaml  service.yaml
src/gnosis_api/: admin.py  auth.py  config.py  db.py  embedding.py  keys.py  main.py  rate_limit.py
src/gnosis_api/models/: __init__.py  common.py  entities.py
src/gnosis_api/routes/: chapters.py  dictionary.py  events.py  greek.py  greek_lexicon.py  groups.py  hebrew.py  keys.py  lexicon.py  meta.py  people.py  places.py  search.py  semantic_search.py  strongs.py  topics.py  verses.py
tests/: conftest.py  test_api.py  test_keys.py
