[project]
name = "gnosis-api"
version = "0.1.0"
description = "REST API for the Gnosis biblical knowledge graph"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "aiosqlite>=0.20",
    "pydantic-settings>=2.7",
    "email-validator>=2.0",
    "sentence-transformers>=3.0",
    "usearch>=2.0",
]

[project.scripts]
gnosis-admin = "gnosis_api.admin:main"

[dependency-groups]
dev = [
    "httpx>=0.28",
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gnosis_api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
